# bookish

frontend/: README.md
functions/: README.md  alembic.ini  books_controller.py  checkouts_controller.py  function_app.py  local.settings.example.json  migrate.py  pyproject.toml  users_controller.py
functions/migrations/: env.py
functions/migrations/versions/: 2f4c328a6c9e_create_tables_for_bookish_db.py  343912d9d347_initial_db_revision.py  3ff4aef0b3dd_added_relationship_of_book_to_borrows_.py
functions/models/: models.py  users.py
