[project]
name = "functions"
version = "0.1.0"
description = ""
authors = [
    {name = "Ned Reid",email = "Ned.Reid@softwire.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-functions (>=1.23.0,<2.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
